@startuml editArticles
skinparam packageStyle rectangle

package "ArticleSubdomain" {

    class ArticleController {
        -articleService: ArticleService
       + addNewSportCategory(categoryName: String): Mono<String>

    }

    class ArticleResponseModel {
        - String title;
        - String body;
        - int wordCount;
        - ArticleStatus articleStatus;
        - String categoryName;
        - String tags;
        - LocalDateTime timePosted;
        - String photoUrl;
        - String articleDescription;
    }

    class ArticleRequestModel {
        - String articleId;
        - String title;
        - String body;
        - int wordCount;
        - String categoryName;
        - ArticleStatus articleStatus;
        - String tags;
        - LocalDateTime timePosted;
        - String photoUrl;
        - String articleDescription;
    }

    interface ArticleService {
         + addNewSportCategory(categoryName: String): Mono<String>
    }

    class ArticleServiceImpl {
        + addNewSportCategory(categoryName: String): Mono<String>

    }

    class Article {
        - String id;
        - articleIdentifer: ArticleIdentifer;
        - title: String;
        - body: String;
        - wordCount: Integer;
        - Categories: categoryName;
        - articleStatus: ArticleStatus;
        - tags: String;
        - timePosted: LocalDateTime;
        - photoUrl: String;
        - articleDescription: String;
    }

    class Categories {
        - id;
        - categoryName: String;
    }

    class Content {
        - title: String;
        - body: String;
        - wordCount: Integer;
    }

    enum ArticleStatus {
        PUBLISHED
        DRAFT
        ARCHIVED
    }

    class ArticleIdentifer {
        - articleId: String;
        + ArticleIdentifer(articleId: String);
    }


    ArticleResponseModel <-- Article
    ArticleRequestModel --> Article
    ArticleController --> ArticleService : uses
    ArticleServiceImpl --> ArticleService : implements

    ArticleRequestModel --> ArticleController
    Article --> ArticleIdentifer
    Article --> Content
    Article --> ArticleStatus
    Article --> Categories
}

@enduml
